update entities: QuestionBank, Answers, User, and their corresponding services, repo and database connection